tooltips: Fix hotkey hints wrapping when next to longer tooltip labels.
Earlier, mostly in non-English languages, the tooltip labels would
force the tooltip hotkey hints to wrap. This commit adds the
`white-space: nowrap` property to ensure that the hotkey hint texts
are forced to be in a single line.

--- a/web/styles/tooltips.css
+++ b/web/styles/tooltips.css
@@ -92,6 +92,7 @@
         color: hsl(225deg 100% 84%);
         padding: 0 5px;
         text-align: center;
+        white-space: nowrap;
     }
 
     .stream-privacy-type-icon {
